fix: scrollbar hide

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,15 @@ body {
     var(--sal, 16px);
 }
 
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+
+html {
+  scrollbar-width: 0;
+}
+
 #app {
   height: 100%;
 }
